# RustGateway

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
admin-api/: Cargo.toml  Dockerfile
admin-api/src/: config.rs  db.rs  main.rs  repositories.rs  routes.rs  upstream_models.rs
admin-api/tests/: integration.rs
admin-web/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
admin-web/.design-sync/: NOTES.md  config.json  conventions.md  preview-provider.tsx
admin-web/.design-sync/fonts/: inter.css
admin-web/.design-sync/previews/: AddItemModal.tsx  Badge.tsx  Button.tsx  Card.tsx  CardContent.tsx  CardHeader.tsx  CardTitle.tsx  Checkbox.tsx  Input.tsx  InputModal.tsx  Item.tsx  ItemContent.tsx  ItemDetail.tsx  ItemEyebrow.tsx  ItemIcon.tsx  ItemList.tsx  ItemMeta.tsx  ItemTitle.tsx  Label.tsx  LongItem.tsx  LongItemActions.tsx  LongItemBody.tsx  LongItemIcon.tsx  LongItemSubtitle.tsx  LongItemTitle.tsx  Sidebar.tsx  SidebarButtonGroup.tsx  SidebarResizeHandle.tsx  Table.tsx  TableBody.tsx  TableCell.tsx  TableHead.tsx  TableHeader.tsx  TableRow.tsx
admin-web/src/: App.tsx  index.css  main.tsx
admin-web/src/components/layout/: icon-rail.tsx  item-list.tsx  list-panel.tsx  sidebar-button-group.tsx  sidebar-resize-handle.tsx  sidebar.tsx
admin-web/src/components/ui/: add-item-modal.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  item.tsx  label.tsx  secret-reveal-modal.tsx  table.tsx  toaster.tsx
admin-web/src/features/admin/: api-key-page.tsx  audit-page.tsx  (+7 more)
admin-web/src/hooks/: use-admin-data.ts
admin-web/src/lib/: api.ts
admin-web/src/stores/: admin-store.ts  toast-store.ts
admin-web/src/styles/: app.css  console.css  content-page.css  item-list.css  sidebar.css
crates/common/: Cargo.toml
crates/common/src/: api_key.rs  audit.rs  lib.rs  models.rs
deploy/: Caddyfile  docker-compose-vps.yml  docker-compose.yml  kind-config.yaml  restore-backup.sh  vps-deploy.sh  vps-setup.sh
deploy/helm/llm-gateway/: Chart.yaml  values-cd.yaml  values-local.yaml  values-vps.yaml  values.yaml
deploy/sql/: 001_init.sql  002_mapping_policies.sql  003_rate_limit_rules.sql  004_audit_log_fk_set_null.sql  005_api_key_suffix.sql
design-console/: README.md  _ds_bundle.css  _ds_bundle.js
design-console/console/: API Gateway Console.html  app.jsx  data.js  icons.jsx  views-admin.jsx  views-core.jsx
design-console/fonts/: fonts.css
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
gateway/: Cargo.toml  Dockerfile
gateway/src/: audit_writer.rs  config.rs  db.rs  main.rs  proxy.rs
gateway/tests/: deepseek_live.rs  integration.rs
(+13 files in other folders)
