[workspace]
members = [
    "admin-api",
    "crates/common",
    "gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.84"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.9"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
hex = "0.4"
http = "1"
log = "0.4"
pingora-core = { version = "0.8.1", default-features = false, features = ["openssl"] }
pingora-http = "0.8.1"
pingora-proxy = { version = "0.8.1", default-features = false, features = ["openssl"] }
prometheus = "0.13.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = "2.5.8"
utoipa = { version = "5.5.0", features = ["chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
