[package]
name = "pingora-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
env_logger.workspace = true
http.workspace = true
llm-gateway-common = { path = "../crates/common" }
log.workspace = true
pingora-core.workspace = true
pingora-http.workspace = true
pingora-proxy.workspace = true
prometheus.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["time"] }
url.workspace = true
uuid.workspace = true
